# TransazioniFinanziarie

./: .gitignore  CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  Date.cpp  Date.h  FileManager.cpp  FileManager.h  IFileConfig.h  README.md  Transaction.cpp  Transaction.h  TransactionsDatabase.cpp  TransactionsDatabase.h  User.cpp  User.h  main.cpp
exceptions/: account_already_exists_error.h  account_dont_exists_error.cpp  account_dont_exists_error.h
test/: CMakeLists.txt  CheckingAccountTest.cpp  DateTest.cpp  FileManagerTest.cpp  TransactionTest.cpp  UserTest.cpp  runAllTests.cpp
test/lib/googletest/: CMakeLists.txt
